# LumaChron

./: .gitignore  README.md
digit_firmware/: CMakeLists.txt  Core1.cpp  Core1.hpp  Digit.cpp  Digit.hpp  Flash.cpp  Flash.hpp  Pixels.cpp  Pixels.hpp  README.md  Register.cpp  Register.hpp  Registers.cpp  Registers.hpp  enums.hpp  functions.cpp  functions.hpp  main.cpp  ws2812.pio
digit_firmware/lib/: I2Cbus.cpp  I2Cbus.hpp  Queue.hpp  RGB.cpp  RGB.hpp  Serial.cpp  Serial.hpp  charactermap.hpp  colorConstants.hpp  colorCron.hpp  color_constants.py  constants.hpp  ds3231rtc.cpp  ds3231rtc.hpp  regNum.hpp  seeed_XIAO_details.h  stopWatch.cpp  stopWatch.hpp
docs/: hardware_parts.md  hardware_setup.md
pc_controller/: 1 minute green to red.csv  README.md  colorChron.csv  colors maps.csv  green.csv  grph.pyw  pyApp.py  setTime.py  testing.csv
pi_display/: 1 minute green to red.csv  Buttons.cpp  Buttons.hpp  CMakeLists.txt  ClientSocket.hpp  Digit.cpp  Digit.hpp  Display.cpp  Display.hpp  GPIOaccess.cpp  GPIOaccess.hpp  I2Cbus.cpp  I2Cbus.hpp  MessageBuffer.cpp  MessageBuffer.hpp  README.md  RGB.cpp  RGB.hpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  SocketException.hpp  colorChron.csv  colorCron.cpp  colorCron.hpp  fdComm.cpp  fdComm.hpp  green.csv  green.json  large map.csv  large map.json  lumachron_display.py  main.cpp  main.hpp  regNum.hpp  stopWatch.cpp  stopWatch.hpp  testing.csv  testing.json  white.csv
